<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/shot_item_margin"
    android:layout_marginBottom="@dimen/shot_item_margin_bottom"
    android:background="@drawable/bg_card"
    android:elevation="2dp"
    android:foreground="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/image_shot"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:transitionName="@string/transition_shot_image" />

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:transitionName="@string/transition_shot_header">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/layout_stats"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="16dp"
            android:textSize="16sp"
            android:transitionName="@string/transition_shot_title" />

        <RelativeLayout
            android:id="@+id/layout_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:transitionName="@string/transition_shot_header">

            <ImageView
                android:id="@+id/image_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_heart_accent_24dp"
                android:transitionName="@string/transition_shot_like_image" />

            <TextView
                android:id="@+id/text_like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/image_like"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:textSize="@dimen/text_body"
                android:transitionName="@string/transition_shot_like_text" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>